--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/styled-engine": "^5.0.0-beta.5",
+    "@material-ui/styles": "^4.11.4",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
